--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <!-- Your code here -->
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring" title="Lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img alt="lion roaring" title="Lion"
 </body>
 </html>
