--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
   <!-- Your code here -->
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-<img alt="lion roaring" title="Lion"
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring" title="Lion"> 
 </body>
 </html>
